# idris-codegen-js2

./: .gitignore  README.md  idris-emptycg.cabal  idris-sdecl.cabal  stack.yaml
src/: Main.hs
src/IRTS/: CodegenEmpty.hs
