Name:           idris-sdecl
Version:        0.0.0.1
License:        BSD3
License-file:   CRAPL-LICENSE.txt
Author:         Edwin Brady
Maintainer:	Edwin Brady <ecb10@st-andrews.ac.uk>
Build-Type:	Simple
Cabal-Version:  >= 1.8

Executable idris-codegen-js2
  Main-is:        Main.hs
  hs-source-dirs: src

  Build-depends:  idris
                , base
                , containers
                , directory
                , filepath
                , haskeline >= 0.7
                , mtl
                , transformers
                , hashable

  ghc-prof-options: -auto-all -caf-all
  ghc-options:      -threaded -rtsopts -funbox-strict-fields


